--- a/css/foundation.css
+++ b/css/foundation.css
@@ -78,9 +78,9 @@
 /*	--------------------------------------------------
 	:: Links
 	-------------------------------------------------- */
-	a { color: #2a85e8; text-decoration: none; line-height: inherit; }
-	a:hover { color: #11639d; }
-	a:focus { color: #cc4714; outline: none; }
+	a { /*color: #2a85e8;*/ text-decoration: none; line-height: inherit; }
+	/*a:hover { color: #11639d; }*/
+	a:focus { /*color: #cc4714;*/ outline: none; }
 	p a, p a:visited { line-height: inherit; }
 	
 
