margim bottom correcao css

--- a/style.css
+++ b/style.css
@@ -599,6 +599,7 @@ License URI:        http://www.opensource.org/licenses/mit-license.phpdsdssddsds
 		/*background-color: #C2A280 !important;*/
 		background-color: #8CC63F;
 		padding: 5px;
+		margin-bottom: 20px;
 	}
 
 	.content-rapidas-wrapper-home {
