--- a/style.css
+++ b/style.css
@@ -984,6 +984,7 @@ License URI:        http://www.opensource.org/licenses/mit-license.phpdsdssddsds
 	.photospace_res .slideshow img {
 		max-width: 100% !important;
 		width: 100% !important;
+		max-height: 500px !important;
 	}
 	
 	.photospace_res .slideshow a.advance-link {
