galeria interna max height: 500px

--- a/style.css
+++ b/style.css
@@ -954,6 +954,7 @@ License URI:        http://www.opensource.org/licenses/mit-license.phpdsdssddsds
 	
 	.photospace_res li.selected a img{
 		border: 3px solid #FA8072 !important;
+		max-height: 550px;
 	}
 	
 	.photospace_res li a img {
