--- a/style.css
+++ b/style.css
@@ -1003,6 +1003,17 @@ License URI:        http://www.opensource.org/licenses/mit-license.phpdsdssddsds
 		width: 100% !important;
 	}
 	
+	.entry-content img, .entry-summary img, .comment-content img, .widget img, .wp-caption {
+		max-width: 100%;
+		height: auto;
+	}
+	
+	.wp-caption .wp-caption-text, .entry-caption, .gallery-caption {
+		background-color: #EEEEEE;
+		color: #555555;
+		padding: 5px 10px;
+	}
+	
 	/* Fotos enviadas dentro da matéria */ 
 
 	.entry-content figure.figure img, .photospace_res .slideshow img {
