header dia das criancas

--- a/style.css
+++ b/style.css
@@ -178,8 +178,8 @@ License URI:        http://www.opensource.org/licenses/mit-license.phpdsdssddsds
 		/*background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
 		/*background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
 		/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-		background: url("images/background.jpg") no-repeat scroll 50% 50% / 100% auto rgba(0, 0, 0, 0);
-		height: 115px;
+		background: url("images/bala.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
+		height: 120px;
 	}
 	
 	#separa-header {
