mudanca logo gastro p/ SVG

--- a/style.css
+++ b/style.css
@@ -169,6 +169,11 @@ License URI:        http://www.opensource.org/licenses/mit-license.phpdsdssddsds
 		float: right;
 	}
 	
+	.logo > img {
+		height: 100%;
+		width: 100%;
+	}
+	
 	#header-home {
 		/*background: rgb(255,255,255); /* Old browsers */
 		/*background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6+ */
@@ -178,7 +183,6 @@ License URI:        http://www.opensource.org/licenses/mit-license.phpdsdssddsds
 		/*background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* IE10+ */
 		/*background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C */
 		/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-		background: url("images/bala.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
 		height: 120px;
 	}
 	
@@ -196,7 +200,7 @@ License URI:        http://www.opensource.org/licenses/mit-license.phpdsdssddsds
 		width: 960px;
 	}
 	
-	#logo-home { position: absolute;	}
+	#logo-home { padding-top: 15px; width: 40%;}
 	
 	#logo-home a.banner {
 	    margin-left: 14px;
